--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth0/nextjs-auth0": "^3.5.0",
     "next": "13.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
